# booklog

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: book.py  comment.py  common.py  feed.py  quote.py  review.py  search.py  stats.py  user.py
backend/app/routers/: auth.py  books.py  comments.py  feed.py  quotes.py  reviews.py  search.py  stats.py
backend/app/services/: aladin.py  email.py  enrichment.py  gemini.py  search.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_books.py  test_comments.py  test_feed.py  test_likes.py  test_quotes.py  test_reviews.py  test_search.py  test_stats.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  books.ts  client.ts  comments.ts  errors.ts  feed.ts  likes.ts  quotes.ts  reviews.ts  search.ts  stats.ts
frontend/src/components/: CommentThread.tsx  HeartIcon.tsx  Layout.tsx  ManualBookForm.tsx  MarkdownContent.tsx  MonthlyCalendar.tsx  ProtectedRoute.tsx  QuoteCard.tsx  QuoteForm.tsx  ReviewCard.tsx  ReviewForm.tsx  StampOverlay.tsx  StarRatingInput.tsx  YearStampCalendar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: BookDetailPage.tsx  BookSearchPage.tsx  FeedPage.tsx  LoginPage.tsx  MyLibraryPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  SearchPage.tsx  StatsPage.tsx
frontend/src/types/: auth.ts  book.ts  comment.ts  common.ts  feed.ts  quote.ts  review.ts  (+2 more)
(+1 files in other folders)
