[project]
name = "booklog-backend"
version = "0.1.0"
description = "BookLog API server (FastAPI + MongoDB)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "google-genai>=0.3.0",
]

[dependency-groups]
dev = [
    "mongomock-motor>=0.0.36",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.23.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
